# pytest-arraydiff

./: .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.md  README.rst  appveyor.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml  publish.yml
pytest_arraydiff/: plugin.py
pytest_fits/: plugin.py
tests/: test_pytest_arraydiff.py  test_pytest_fits.py
tests/baseline/: test_pytest_arraydiff_TestDerivedTwo_test_array_one.txt  test_succeeds_class.fits  test_succeeds_func.fits  test_succeeds_func_array.fits  test_succeeds_func_default.txt  test_succeeds_func_fits_hdu.fits  test_succeeds_func_pdhdf.h5  test_tolerance.fits
